src/test/ui/parser/recover-enum2.stderr
error: expected type, found `{`
  --> $DIR/recover-enum2.rs:6:18
   |
LL |             abc: {},
   |                  ^ expected type

error: missing separator `,`
  --> $DIR/recover-enum2.rs:25:23
   |
LL |             Nope(i32 {})
   |                 -     ^
   |                 |
   |                 while parsing the list starting here

error: missing separator `,`
  --> $DIR/recover-enum2.rs:25:23
   |
LL |         enum Test4 {
   |                    - while parsing the list starting here
LL |             Nope(i32 {})
   |                       ^

error: expected expression, found `)`
  --> $DIR/recover-enum2.rs:25:24
   |
LL |             Nope(i32 {})
   |                        ^ expected expression

error: expected item, found `}`
  --> $DIR/recover-enum2.rs:28:1
   |
LL | }
   | ^ expected item

error: aborting due to 5 previous errors

